--- a/src/components/GeometryComponent/layout.css
+++ b/src/components/GeometryComponent/layout.css
@@ -1,8 +1,7 @@
 #myCanvas {
     background: #ffffff;
-    border:1px solid #000000;
-    width: 100%;
-    height: 300%;
+    /* border:1px solid #000000; */
+    margin-top: 65px
 }
 
 .modelContainer {
@@ -10,10 +9,10 @@
     
 }
 
-.modelContainer .navCube {
-    height: 100%;
-    width: 100%;
-    position: absolute;
+.navCube {
+    height: 200px;
+    width: 200px;
+    position: fixed;
     right: 0;
     bottom: 0;
 }
