added some panels for plugin management

--- a/src/components/GeometryComponent/layout.css
+++ b/src/components/GeometryComponent/layout.css
@@ -17,6 +17,15 @@
     bottom: 0;
 }
 
+.sections { 
+        width: 200px;
+        height: 200px;
+        bottom: 100px;
+        right: 0;
+        position: fixed;
+        z-index: 200000
+}
+
 /* ----------------------------------------------------------------------------------------------------------*/
 /* TreeViewPlugin */
 /* ----------------------------------------------------------------------------------------------------------*/
