--- a/src/plugins/BuildingSpecificationManager/styles.css
+++ b/src/plugins/BuildingSpecificationManager/styles.css
@@ -12,12 +12,13 @@
 }
 
 .Plugin-title {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(202, 185, 185);
+  min-height: 7vh;
   display: flex;
+  border: thick;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: rgb(179, 24, 75);
+  color: rgb(221, 60, 95);
 }
